<resources>
    <string name="app_name">Tutorial 1</string>

    <string name="first_number">첫 번째 숫자</string>
    <string name="second_number">두 번째 숫자</string>

    <string name="plus_button">더하기</string>
    <string name="minus_button">빼기</string>
    <string name="multiply_button">곱하기</string>
    <string name="divide_button">나누기</string>

    <string name="list_button">리스트</string>
    <string name="exit_button">종료</string>
</resources>
