<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/number1"
            android:hint="@string/first_number"
            app:layout_constraintHorizontal_bias="0.515" android:layout_marginBottom="504dp"/>
    <EditText
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/number2"
            android:hint="@string/second_number"
            app:layout_constraintHorizontal_bias="0.515" android:layout_marginBottom="456dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:onClick="addClick"
            app:layout_constraintHorizontal_bias="0.054" android:layout_marginBottom="400dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtractButton"
            android:onClick="subtractClick"
            app:layout_constraintHorizontal_bias="0.351" android:layout_marginBottom="400dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiplyButton"
            android:onClick="multiplyClick"
            app:layout_constraintHorizontal_bias="0.648" android:layout_marginBottom="400dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divideButton"
            android:onClick="divideClick"
            app:layout_constraintHorizontal_bias="0.945" android:layout_marginBottom="400dp"/>
    <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="352dp"
            android:layout_height="51dp"
            android:id="@+id/result"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginBottom="336dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listButton"
            android:layout_marginEnd="280dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"/>
    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exitButton"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"/>
</android.support.constraint.ConstraintLayout>